--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Base configs
-baseurl: "https://photography.rampatra.com"
+baseurl: "https://www.evgheniiloctev.art"
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
-google_analytics: "UA-46465113-2"
+google_analytics: "-"
 
 # UI configs
 title: "Photography by Ram Patra"
