--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,16 @@ image_thumbs_loc: "/images/thumbs"
 google_analytics: "-"
 
 # UI configs
-title: "Photography by Ram Patra"
-subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+title: "Evghenii Loctev"
+subtitle: "Portfolio"
+author: "Evghenii Loctev"
 header:
- title: "Photography"
- subtitle: "by Ram Patra"
+ title: "Portfolio"
+ subtitle: "Evghenii Loctev"
 footer:
- name: "Hey there, my name is Ram"
- bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork me on github</a> ;)"
-web_design: "AJ"
+ name: "Hello! My name is Evghenii Loctev"
+ bio: "Creative director who manages projects collaboratively and in an organized manner. A qualified professional with six years of experience in CG. Good at gathering ideas, leading design teams, keeping to deadlines, and fixing issues. Open to new ideas, a self-motivated person who wants to keep learning."
+ web_design: "AJ"
 social_urls:
   facebook: "https://www.facebook.com/ramswaroop"
   twitter: "https://www.twitter.com/ram__patra"
