--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,16 @@ title: "Evghenii Loctev"
 subtitle: "Portfolio"
 author: "Evghenii Loctev"
 header:
- title: "Portfolio"
- subtitle: "Evghenii Loctev"
+ title: "Evghenii Loctev"
+ subtitle: "Creative Director"
 footer:
  name: "Hello! My name is Evghenii Loctev"
- bio: "Creative director who manages projects collaboratively and in an organized manner. A qualified professional with six years of experience in CG. Good at gathering ideas, leading design teams, keeping to deadlines, and fixing issues. Open to new ideas, a self-motivated person who wants to keep learning."
+ bio: "Creative director who manages projects collaboratively and in an organized manner. A qualified professional with six years of experience in CG, started as 3D Generalist. Good at gathering ideas, leading design teams, keeping to deadlines, and fixing issues. Open to new ideas, a self-motivated person who wants to keep learning."
  web_design: "AJ"
 social_urls:
-  facebook: "https://www.facebook.com/ramswaroop"
-  twitter: "https://www.twitter.com/ram__patra"
-  instagram: "https://www.instagram.com/ram_patra"
-  dribbble: "https://dribbble.com/rampatra"
-  linkedin: "https://in.linkedin.com/in/ram-patra"
-  github: "https://www.github.com/rampatra"
+  facebook: ""
+  twitter: ""
+  instagram: ""
+  dribbble: ""
+  linkedin: "https://www.linkedin.com/in/evgheniiloctev/"
+  github: ""
