--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,6 @@ footer:
  bio: "Creative director who manages projects collaboratively and in an organized manner. A qualified professional with six years of experience in CG, started as 3D Generalist. Good at gathering ideas, leading design teams, keeping to deadlines, and fixing issues. Open to new ideas, a self-motivated person who wants to keep learning."
  web_design: "AJ"
 social_urls:
-  facebook: ""
-  twitter: ""
-  instagram: ""
-  dribbble: ""
   linkedin: "https://www.linkedin.com/in/evgheniiloctev/"
+  gmail: "arlechinoy@gmail.com"
   
